name:                scheme
version:             1
license:             BSD3
author:              Chris Lumens
maintainer:          chris@bangmoney.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable scheme
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       cond,
                       containers >=0.5 && <0.6,
                       directory >=1.2 && <1.3,
                       exceptions >=0.8 && <0.9,
                       haskeline >=0.7 && <0.8,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2,
                       resourcet >=1.1 && <1.2,
                       text >=1.2 && <1.3,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
