name:                Scheme
version:             1
license:             BSD3
author:              Chris Lumens
maintainer:          chris@bangmoney.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Scheme.Eval,
                       Scheme.Exceptions,
                       Scheme.LispVal,
                       Scheme.Parser,
                       Scheme.Prim,
                       Scheme.Repl

  build-depends:       base >=4.8 && <4.9,
                       cond,
                       containers >=0.5 && <0.6,
                       directory >=1.2 && <1.3,
                       exceptions >=0.8 && <0.9,
                       haskeline >=0.7 && <0.8,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2,
                       resourcet >=1.1 && <1.2,
                       text >=1.2 && <1.3,
                       transformers

  default-language:    Haskell2010
  ghc-options:         -Wall

executable scheme
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       cond,
                       containers >=0.5 && <0.6,
                       directory >=1.2 && <1.3,
                       haskeline >=0.7 && <0.8,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2,
                       text >=1.2 && <1.3,
                       transformers,
                       Scheme

  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite test-scheme
  type:            exitcode-stdio-1.0
  hs-source-dirs:  tests
  main-is:         Main.hs
  build-depends:   HUnit,
                   base,
                   tasty,
                   tasty-hunit,
                   text >=1.2 && <1.3,
                   Scheme
