name:                Scheme
version:             1
license:             BSD3
author:              Chris Lumens
maintainer:          chris@bangmoney.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Scheme.Eval,
                       Scheme.Exceptions,
                       Scheme.LispVal,
                       Scheme.Parser,
                       Scheme.Prim,
                       Scheme.Repl

  build-depends:       base >=4.9 && <4.10,
                       cond,
                       containers,
                       directory,
                       exceptions,
                       haskeline,
                       mtl,
                       parsec,
                       resourcet,
                       text,
                       transformers

  default-language:    Haskell2010
  ghc-options:         -Wall

executable scheme
  main-is:             Main.hs
  build-depends:       base >=4.0 && <4.10,
                       cond,
                       containers,
                       directory,
                       haskeline,
                       mtl,
                       parsec,
                       text,
                       transformers,
                       Scheme

  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite test-scheme
  type:            exitcode-stdio-1.0
  hs-source-dirs:  tests
  main-is:         Main.hs
  build-depends:   HUnit,
                   base,
                   filepath,
                   tasty,
                   tasty-hunit,
                   text,
                   Scheme
